; ModuleID = '/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_clock.c_wceex_clock.c'
source_filename = "/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_clock.c_wceex_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wceex_clock() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 @GetSystemTime(i32* %2)
  %5 = call i64 @SystemTimeToFileTime(i32* %2, i32* %3)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* %3, align 4
  store i32 %8, i32* %1, align 4
  br label %10

9:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %10

10:                                               ; preds = %9, %7
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @GetSystemTime(i32*) #1

declare dso_local i64 @SystemTimeToFileTime(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
